--- a/locales/de/index.json
+++ b/locales/de/index.json
@@ -1,3 +1,4 @@
 {
-    "welcome":"herzlich willkommen bei atelier ds"
+    "welcome":"herzlich willkommen bei atelier ds",
+    "title":"German title"
 }
