--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -2,5 +2,13 @@
     "send_inquiry" : "Send an inquiry",
     "interior": "Interior",
     "bodywork":"Bodywork", 
-    "chrome":"Chrome"
+    "chrome":"Chrome",
+    "first_name":"First name",
+    "last_name": "Last name",
+    "email": "Email",
+    "message":"Message",
+    "send_email":"Send email",
+    "email_alert_success": "Your email was sent. We will get back to you as soon as possible.",
+    "email_alert_error":"Something went wrong. Please try again.",
+    "email_form_title" : "Contact us for further information"
 }
