footer styling changes

--- a/locales/de/footer.json
+++ b/locales/de/footer.json
@@ -2,6 +2,7 @@
     "office_title":"The office",
     "our_work":"Our work",
     "about_us":"About us",
+    "contact":"Contact",
     "our_partner": "Our partner",
     "copyright" : "AtelierDS. All rights reserved."
 }
