fix chrome page design

--- a/locales/de/chromePage.json
+++ b/locales/de/chromePage.json
@@ -1,8 +1,9 @@
 {
     "title" : "Chrome",
     "our_work_title": "Our work",
-    "our_work_text_1": "For disassembled, scratched, dented and overall damaged parts like bumpers, preparation is very important. We are doing everything that is possible to make the surface perfect. All errors are corrected as much as possible and the polish is even better and deeper than the original.",
-    "our_work_text_2": "In the case of a high-quality restoration, the old built-in stainless steel parts usually cannot keep up and it is therefore advisable to refurbish them.",
+    "our_work_text_1": "For disassembled, scratched, dented and overall damaged parts like bumpers, preparation is very important. We are doing everything that is possible to make the surface perfect.",
+    "our_work_text_2": "All errors are corrected as much as possible and the polish is even better and deeper than the original.",
+    "our_work_text_3": "In the case of a high-quality restoration, the old built-in stainless steel parts usually cannot keep up and it is therefore advisable to refurbish them.",
     "see_gallery_btn":"See the gallery",
     "quality_service_title": "Quality service",
     "quality_service_text": "This program is particularly suitable for extraordinary top restorations where the new condition is really aimed for and should be achieved as much as possible.",
