index page translated

--- a/locales/de/index.json
+++ b/locales/de/index.json
@@ -1,4 +1,39 @@
 {
-    "welcome":"herzlich willkommen bei atelier ds",
-    "title":"German title"
+  "AtelierDS": "AtelierDS",
+  "welcome_text": "Willkommen bei AtelierDS. Wir sind Citroen DS-Enthusiasten, die Ihren DS so aussehen lassen, als käme er gerade aus der Fabrik. Neben Detaillierung und Restaurierung bieten wir fertige Citroen DS Fahrzeuge zum Kauf an.",
+  "interior_text": "Wir bieten komplette Innenrestaurierung in Top-Qualität.",
+  "": "",
+  "check_our_cars": "Überprüfen Sie unsere Autos",
+  "body_restauration": "Wiederherstellung des Körpers",
+  "body_restauration_text": "Um das Ganze abzurunden, bieten wir eine komplette Karosserierestaurierung in Kroatien an.",
+  "chrome_parts": "Chromteile",
+  "chrome_parts_text": "Wenn Ihr Chrom nicht mehr so schön und glänzend aussieht wie früher ... nun, wir bringen es wieder in seinen ursprünglichen glänzenden Zustand!",
+  "interior": "Innenraum",
+  "see_more": "Sehen Sie mehr",
+  "quality_service": "Qualitätsservice rundum",
+  "quality_service_text": "Atelierds bietet qualitativ hochwertigen Service in allen Aspekten der Autorestaurierung. Mit unseren Partnern in Kroatien für die Karosserierestaurierung bieten wir die komplette Restaurierung des Citroen DS an.",
+  "working_with_us": "Mit uns zu arbeiten macht Freude",
+  "working_with_us_text1": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "working_with_us_text2": "Sie hat nicht nur fünf Jahrhunderte, sondern auch den Sprung in den elektronischen Satz überstanden und ist im Wesentlichen unverändert geblieben.",
+  "a_growing_company": "Ein wachsendes Unternehmen",
+  "a_growing_company_text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "crafted_with_love": "Mit Liebe gefertigt, weil wir Citroen DS lieben",
+  "perfect_blend": "Eine perfekte Mischung aus Kreativität und Qualität",
+  "personal_touch": "Persönliche Note für alle unsere Arbeiten",
+  "antun": "Antun Delinger",
+  "antun_text": "Restaurierung der Karosserie",
+  "christian": "Christian Sturm",
+  "christian_text": "Transport und Logistik",
+  "enzo": "Enzo Forgione",
+  "enzo_text": "CEO",
+  "luki": "Luki",
+  "luki_text": "Chrom & Interieur",
+  "people_working_on_a_project": "Menschen, die an einem Projekt arbeiten",
+  "people_working_on_a_project_text": "Es ist unmöglich, ein rentables Geschäft ohne qualifizierte Mitarbeiter aufrechtzuerhalten. Jeder unserer Bereiche hat einen Verantwortlichen.",
+  "excellent_services": "Ausgezeichnete Dienstleistungen",
+  "excellent_services_text": "Rundum Qualität. Wir widmen dem kleinsten Detail unsere volle Aufmerksamkeit.",
+  "like": "Gefällt dir, was du siehst?",
+  "like_text": "Kontaktieren Sie uns und beginnen Sie mit dem Prozess, das Beste aus Ihrem Citroen zu machen!",
+  "we_growing": "Wir wachsen",
+  "we_growing_text": "Wir versuchen, eine vollständige Restaurierung anzubieten und uns nicht nur auf die Innenausstattung festzulegen. Was auch immer Ihr Citroen-Auto braucht, wir können es tun."
 }
