--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,4 +1,40 @@
 {
-    "welcome":"Welcome to atelier ds",
-    "title":"English title"
+  "welcome": "Welcome to atelier ds",
+  "title": "English title",
+  "AtelierDS": "AtelierDS",
+  "welcome_text": "Welcome to AtelierDS. We are Citroen DS enthusiasts who will make your DS look like it just came out of factory. Along with the detailing and restoration, we offer already finished Citroen DS cars for sale.",
+  "check_our_cars": "Check our cars",
+  "interior": "Interior",
+  "interior_text": "We offer complete interior restoration with the top quality.",
+  "chrome_parts": "Chrome parts",
+  "chrome_parts_text": "If your chrome does not look nice and shiny as it used to be... well, we will bring it to its original shiny condition!",
+  "body_restauration": "Body restoration",
+  "body_restauration_text": "To wrap it all up, we provide complete body restoration in Croatia.",
+  "see_more": "See more",
+  "working_with_us": "Working with us is a pleasure",
+  "working_with_us_text1": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "working_with_us_text2": "It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.",
+  "quality_service": "Quality service all-round",
+  "quality_service_text": "Atelierds provides quality service on all aspects of car restoration. With our partners in Croatia for bodywork restoration, we offer complete restoration of Citroen DS.",
+  "a_growing_company": "A growing company",
+  "a_growing_company_text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "personal_touch": "Personal touch for all of our work",
+  "perfect_blend": "A perfect blend of creativity and quality",
+  "crafted_with_love": "Crafted with love, because we love Citroen DS",
+  "people_working_on_a_project": "People working on a project",
+  "people_working_on_a_project_text": "It is impossible to maintain viable business without quality people. Each of our divisions have a person in charge.",
+  "enzo": "Enzo Forgione",
+  "enzo_text": "CEO",
+  "luki": "Luki",
+  "luki_text": "Chrome & interior",
+  "christian": "Christian Sturm",
+  "christian_text": "Transportation and logistics",
+  "antun": "Antun Delinger",
+  "antun_text": "Bodywork restoration",
+  "excellent_services": "Excellent Services",
+  "excellent_services_text": "Quality all around. We devote our full attention to the smallest detail.",
+  "we_growing": "We are growing",
+  "we_growing_text": "We are trying to offer full restoration and not lock ourselves only on interior. So whatever your Citroen car needs, we can do it.",
+  "like": "Like what you see?",
+  "like_text": "Contact us and start the process of making the best of your Citroen!"
 }
