--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -1,14 +1,20 @@
 {
-    "send_inquiry" : "Send an inquiry",
-    "interior": "Interior",
-    "bodywork":"Bodywork", 
-    "chrome":"Chrome",
-    "first_name":"First name",
-    "last_name": "Last name",
-    "email": "Email",
-    "message":"Message",
-    "send_email":"Send email",
-    "email_alert_success": "Your email was sent. We will get back to you as soon as possible.",
-    "email_alert_error":"Something went wrong. Please try again.",
-    "email_form_title" : "Contact us for further information"
+  "send_inquiry": "Envoyer une demande",
+  "interior": "Intérieur",
+  "bodywork": "Carrosserie",
+  "chrome": "Chrome",
+  "first_name": "Prénom",
+  "last_name": "Nom de famille",
+  "email": "Email",
+  "message": "Message",
+  "send_email": "Envoyer un e-mail",
+  "email_alert_success": "Votre e-mail a été envoyé. Nous vous répondrons dès que possible.",
+  "email_alert_error": "Quelque chose s'est mal passé. Veuillez réessayer.",
+  "email_form_title": "Contactez-nous pour plus d'informations",
+  "message_type":"Tapez un message...",
+  "cars_for_sale":"Voitures à vendre",
+  "interior_navbar":"Intérieur",
+  "chrome_parts":"Pièces chromées",
+  "body_restoration":"Restauration de carrosserie",
+  "contact":"Contact"
 }
