--- a/locales/it/index.json
+++ b/locales/it/index.json
@@ -1,4 +1,40 @@
 {
-    "welcome":"benvenuto nell'atelier ds",
-    "title":"Italian title"
+  "welcome": "benvenuto nell'atelier ds",
+  "title": "Italian title",
+  "welcome_text": "Benvenuto in AtelierDS. Siamo appassionati di Citroen DS che fanno sembrare la tua DS appena uscita dalla fabbrica. Oltre ai dettagli e al restauro, offriamo in vendita veicoli Citroen DS già pronti.",
+  "check_our_cars": "Controlla le nostre auto",
+  "interior_text": "Offriamo restauro interno completo con la massima qualità.",
+  "body_restauration": "Restauro del corpo",
+  "body_restauration_text": "Per concludere, forniamo un restauro completo del corpo in Croazia.",
+  "AtelierDS": "AtelierDS",
+  "chrome_parts": "Parti cromate",
+  "chrome_parts_text": "Se la tua cromatura non è bella e lucida come una volta... beh, la riporteremo alla sua condizione originale e brillante!",
+  "interior": "Interno",
+  "see_more": "Vedi altro",
+  "quality_service": "Servizio di qualità a tutto tondo",
+  "quality_service_text": "Ateliards fornisce un servizio di qualità su tutti gli aspetti del restauro dell'auto. Con i nostri partner in Croazia per il restauro della carrozzeria, offriamo il restauro completo di Citroen DS.",
+  "working_with_us": "Lavorare con noi è un piacere",
+  "working_with_us_text1": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "working_with_us_text2": "È sopravvissuto non solo a cinque secoli, ma anche al salto nella composizione elettronica, rimanendo sostanzialmente invariato.",
+  "a_growing_company": "Un'azienda in crescita",
+  "a_growing_company_text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.",
+  "crafted_with_love": "Realizzato con amore, perché amiamo Citroen DS",
+  "perfect_blend": "Un perfetto connubio tra creatività e qualità",
+  "personal_touch": "Tocco personale per tutto il nostro lavoro",
+  "antun": "Antun Delinger",
+  "antun_text": "Restauro carrozzeria",
+  "christian": "Christian Sturm",
+  "christian_text": "Trasporti e logistica",
+  "enzo": "Enzo Forgione",
+  "enzo_text": "CEO",
+  "luki": "Luki",
+  "luki_text": "Cromo e interni",
+  "people_working_on_a_project": "Persone che lavorano su un progetto",
+  "people_working_on_a_project_text": "È impossibile mantenere un'attività redditizia senza persone di qualità. Ciascuna delle nostre divisioni ha un responsabile.",
+  "excellent_services": "Servizi eccellenti",
+  "excellent_services_text": "Qualità tutto intorno. Dedichiamo tutta la nostra attenzione ai minimi dettagli.",
+  "like": "Ti piace quello che vedi?",
+  "like_text": "Contattaci e inizia il processo per ottenere il meglio dalla tua Citroen!",
+  "we_growing": "Stiamo crescendo",
+  "we_growing_text": "Stiamo cercando di offrire un restauro completo e non chiuderci solo sugli interni. Quindi, qualunque cosa la tua Citroen abbia bisogno, possiamo farla."
 }
