--- a/locales/de/common.json
+++ b/locales/de/common.json
@@ -1,14 +1,20 @@
 {
-    "send_inquiry" : "Send an inquiry",
-    "interior": "Interior",
-    "bodywork":"Bodywork", 
-    "chrome":"Chrome",
-    "first_name":"First name",
-    "last_name": "Last name",
-    "email": "Email",
-    "message":"Message",
-    "send_email":"Send email",
-    "email_alert_success": "Your email was sent. We will get back to you as soon as possible.",
-    "email_alert_error":"Something went wrong. Please try again.",
-    "email_form_title" : "Contact us for further information"
+  "send_inquiry": "Senden Sie eine Anfrage",
+  "interior": "Innenraum",
+  "bodywork": "Karosserie",
+  "chrome": "Chrom",
+  "first_name": "Vorname",
+  "last_name": "Nachname",
+  "email": "Email",
+  "message": "Mitteilung",
+  "send_email": "E-Mail senden",
+  "email_alert_success": "Ihre E-Mail wurde gesendet. Wir werden uns so schnell wie möglich bei Ihnen melden.",
+  "email_alert_error": "Etwas ist schief gelaufen. Bitte versuche es erneut.",
+  "email_form_title": "Kontaktieren Sie uns für weitere Informationen",
+  "message_type":"Geben Sie eine Nachricht ein...",
+  "cars_for_sale":"Autos zu verkaufen",
+  "interior_navbar":"Innenraum",
+  "chrome_parts":"Chromteile",
+  "body_restoration":"Wiederherstellung des Körpers",
+  "contact":"Kontakt"
 }
