--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,14 +1,20 @@
 {
-    "send_inquiry" : "Send an inquiry",
-    "interior": "Interior",
-    "bodywork":"Bodywork", 
-    "chrome":"Chrome",
-    "first_name":"First name",
-    "last_name": "Last name",
-    "email": "Email",
-    "message":"Message",
-    "send_email":"Send email",
-    "email_alert_success": "Your email was sent. We will get back to you as soon as possible.",
-    "email_alert_error":"Something went wrong. Please try again.",
-    "email_form_title" : "Contact us for further information"
+  "send_inquiry": "Send an inquiry",
+  "interior": "Interior",
+  "bodywork": "Bodywork",
+  "chrome": "Chrome",
+  "first_name": "First name",
+  "last_name": "Last name",
+  "email": "Email",
+  "message": "Message",
+  "send_email": "Send email",
+  "email_alert_success": "Your email was sent. We will get back to you as soon as possible.",
+  "email_alert_error": "Something went wrong. Please try again.",
+  "email_form_title": "Contact us for further information",
+  "message_type":"Type a message...",
+  "cars_for_sale":"Cars for sale",
+  "interior_navbar":"Interior",
+  "chrome_parts":"Chrome parts",
+  "body_restoration":"Body restoration",
+  "contact":"Contact"
 }
