--- a/locales/it/common.json
+++ b/locales/it/common.json
@@ -1,14 +1,20 @@
 {
-    "send_inquiry" : "Send an inquiry",
-    "interior": "Interior",
-    "bodywork":"Bodywork", 
-    "chrome":"Chrome",
-    "first_name":"First name",
-    "last_name": "Last name",
-    "email": "Email",
-    "message":"Message",
-    "send_email":"Send email",
-    "email_alert_success": "Your email was sent. We will get back to you as soon as possible.",
-    "email_alert_error":"Something went wrong. Please try again.",
-    "email_form_title" : "Contact us for further information"
+  "send_inquiry": "Invia una richiesta",
+  "interior": "Interno",
+  "bodywork": "Carrozzeria",
+  "chrome": "Cromo",
+  "first_name": "Nome",
+  "last_name": "Cognome",
+  "email": "Email",
+  "message": "Messaggio",
+  "send_email": "Invia una email",
+  "email_alert_success": "La tua email è stata inviata. Ti risponderemo il prima possibile.",
+  "email_alert_error": "Qualcosa è andato storto. Per favore riprova.",
+  "email_form_title": "Contattaci per ulteriori informazioni",
+  "message_type":"Scrivi un messaggio...",
+  "cars_for_sale":"Macchine in vendita",
+  "interior_navbar":"Interno",
+  "chrome_parts":"Parti cromate",
+  "body_restoration":"Restauro del corpo",
+  "contact":"Contatto"
 }
