cars and chrome page translated

--- a/locales/de/carsPage.json
+++ b/locales/de/carsPage.json
@@ -1,4 +1,4 @@
 {
-  "cars_for_sale": "Cars for sale (de)",
-  "title_message": "Here you can see which cars do we have for sale at the moment."
+  "cars_for_sale": "Autos zu verkaufen",
+  "title_message": "Hier können Sie sehen, welche Autos wir im Moment zum Verkauf haben."
 }
