--- a/locales/fr/carsPage.json
+++ b/locales/fr/carsPage.json
@@ -1,4 +1,4 @@
 {
-  "cars_for_sale'": "Cars for sale (de)",
-  "title_message": ""
+  "cars_for_sale": "Voitures à vendre",
+  "title_message": "Ici vous pouvez voir quelles voitures nous avons à vendre en ce moment."
 }
