--- a/locales/it/chromePage.json
+++ b/locales/it/chromePage.json
@@ -1,58 +1,58 @@
 {
-  "title": "Chrome",
-  "our_work_title": "Our work",
-  "our_work_text_1": "For disassembled, scratched, dented and overall damaged parts like bumpers, preparation is very important. We are doing everything that is possible to make the surface perfect.",
-  "our_work_text_2": "All errors are corrected as much as possible and the polish is even better and deeper than the original.",
-  "our_work_text_3": "In the case of a high-quality restoration, the old built-in stainless steel parts usually cannot keep up and it is therefore advisable to refurbish them.",
-  "see_gallery_btn": "See the gallery",
-  "quality_service_title": "Quality service",
-  "quality_service_text": "This program is particularly suitable for extraordinary top restorations where the new condition is really aimed for and should be achieved as much as possible.",
-  "what_do_we_fix_title": "What do we fix?",
-  "fix_type_1": "DS PALLAS von 4 bis 1967",
-  "fix_type_2": "DS PALLAS von 1969 bis 1971",
-  "fix_type_3": "DS PALLAS von 1971 bis 1975",
-  "fix_1_1": "Complete front and rear bumpers",
-  "fix_1_2": "All stainless steel rocker panels",
-  "fix_1_3": "All trims inside doors and roof area",
-  "fix_1_4": "All roof connections outside stainless steel including the trumpets",
-  "fix_1_5": "Four inside handles with grip shells",
-  "fix_1_6": "Exterior handles polished",
-  "fix_1_7": "Interior lights and loop holders",
-  "fix_1_8": "Sun visors",
-  "fix_1_9": "Mirror holder",
-  "fix_1_10": "Chrome surround steering wheel",
-  "fix_1_11": "Ashtray",
-  "fix_1_12": "If necessary, new chrome plating of the dashboard (showroom effect)",
-  "fix_1_13": "Chrome plating on gear lever and vent controls",
-  "fix_1_14": "Wiper arms",
-  "fix_1_15": "Hubcaps",
-  "fix_1_16": "Spray nozzles",
-  "fix_1_17": "Trunk hinges",
-  "fix_2_1": "Complete front and rear bumpers",
-  "fix_2_2": "All stainless steel rocker panels",
-  "fix_2_3": "All trims inside doors and roof area",
-  "fix_2_4": "All roof connections outside stainless steel including the trumpets",
-  "fix_2_5": "Four inner handles with grip shells",
-  "fix_2_6": "Exterior handles polished",
-  "fix_2_7": "Interior lights and loop holders",
-  "fix_2_8": "Sun visors",
-  "fix_2_9": "Gear lever chrome plating",
-  "fix_2_10": "Dashboard instrument panel 3 chrome rings",
-  "fix_2_11": "Wiper arms",
-  "fix_2_12": "Hubcaps",
-  "fix_2_13": "Spray nozzles",
-  "fix_2_14": "Trunk hinges",
-  "fix_3_1": "Complete front and rear bumpers",
-  "fix_3_2": "All stainless steel rocker panels",
-  "fix_3_3": "All trims inside doors and roof area",
-  "fix_3_4": "All roof connections outside stainless steel including the trumpets",
-  "fix_3_5": "Four inner handles with grip shells",
-  "fix_3_6": "Interior lights and loop holders",
-  "fix_3_7": "Sun visors",
-  "fix_3_8": "Gear level chrome plating",
-  "fix_3_9": "Dashboard instrument panel 3 chrome rings",
-  "fix_3_10": "Hubcaps",
-  "fix_3_11": "Trunk hinges",
-  "fix_3_12": "four exterior door buckles, flat, newly chrome-plated",
-  "gallery_title": "Gallery"
+  "title": "Cromo",
+  "our_work_title": "Il nostro lavoro",
+  "our_work_text_1": "Per le parti smontate, graffiate, ammaccate e complessivamente danneggiate come i paraurti, la preparazione è molto importante. Stiamo facendo tutto il possibile per rendere la superficie perfetta.",
+  "our_work_text_2": "Tutti gli errori vengono corretti il più possibile e la lucidatura è persino migliore e più profonda dell'originale.",
+  "our_work_text_3": "Nel caso di un restauro di alta qualità, le vecchie parti in acciaio inox da incasso solitamente non riescono a tenere il passo ed è quindi consigliabile rinnovarle.",
+  "see_gallery_btn": "Guarda la galleria",
+  "quality_service_title": "Servizio di qualità",
+  "quality_service_text": "Questo programma è particolarmente adatto per restauri straordinari in cui la nuova condizione è realmente mirata e dovrebbe essere raggiunta il più possibile.",
+  "what_do_we_fix_title": "Cosa aggiustiamo?",
+  "fix_type_1": "DS PALLAS dal 4 al 1967",
+  "fix_type_2": "DS PALLAS dal 1969 al 1971",
+  "fix_type_3": "DS PALLAS dal 1971 al 1975",
+  "fix_1_1": "Paraurti anteriore e posteriore completi",
+  "fix_1_2": "Tutti i pannelli a bilanciere in acciaio inox",
+  "fix_1_3": "Tutti i rivestimenti interni delle portiere e dell'area del tetto",
+  "fix_1_4": "Tutti i collegamenti del tetto all'esterno dell'acciaio inossidabile comprese le trombe",
+  "fix_1_5": "Quattro maniglie interne con gusci di presa",
+  "fix_1_6": "Maniglie esterne lucidate",
+  "fix_1_7": "Luci interne e supporti ad anello",
+  "fix_1_8": "Alette parasole",
+  "fix_1_9": "Porta specchietto",
+  "fix_1_10": "Volante con cornice cromata",
+  "fix_1_11": "Portacenere",
+  "fix_1_12": "Se necessario nuova cromatura della plancia (effetto showroom)",
+  "fix_1_13": "Cromatura su leva del cambio e comandi di sfiato",
+  "fix_1_14": "Bracci tergicristallo",
+  "fix_1_15": "Coprimozzi",
+  "fix_1_16": "Ugelli a spruzzo",
+  "fix_1_17": "Cerniere del tronco",
+  "fix_2_1": "Paraurti anteriore e posteriore completi",
+  "fix_2_2": "Tutti i pannelli a bilanciere in acciaio inox",
+  "fix_2_3": "Tutti i rivestimenti interni delle portiere e dell'area del tetto",
+  "fix_2_4": "Tutti i collegamenti del tetto fuori dall'acciaio inossidabile compreso la trombas",
+  "fix_2_5": "Quattro maniglie interne con gusci di presa",
+  "fix_2_6": "Maniglie esterne lucidate",
+  "fix_2_7": "Luci interne e supporti ad anello",
+  "fix_2_8": "Alette parasole",
+  "fix_2_9": "Cromatura della leva del cambio",
+  "fix_2_10": "Cruscotto cruscotto 3 anelli cromati",
+  "fix_2_11": "Bracci tergiristallo",
+  "fix_2_12": "Coprimozzi",
+  "fix_2_13": "Ugelli a spruzzo",
+  "fix_2_14": "Cerniere del tronco",
+  "fix_3_1": "Paraurti anteriore e posteriore completi",
+  "fix_3_2": "Tutti i pannelli a bilanciere in acciaio inox",
+  "fix_3_3": "Tutti i rivestimenti interni delle portiere e dell'area del tetto",
+  "fix_3_4": "Tutti i collegamenti del tetto all'esterno dell'acciaio inossidabile comprese le trombe",
+  "fix_3_5": "Quattro maniglie interne con gusci di presa",
+  "fix_3_6": "Luci interne e supporti ad anello",
+  "fix_3_7": "Alette parasole",
+  "fix_3_8": "Cromatura del livello del cambio",
+  "fix_3_9": "Cruscotto cruscotto 3 anelli cromati",
+  "fix_3_10": "Coprimozzi",
+  "fix_3_11": "Cerniere del tronco",
+  "fix_3_12": "Qattro fibbie per porte esterne, piatte, appena cromate",
+  "gallery_title": "Galleria"
 }
