--- a/locales/de/chromePage.json
+++ b/locales/de/chromePage.json
@@ -1,58 +1,58 @@
 {
-  "title": "Chrome",
-  "our_work_title": "Our work",
-  "our_work_text_1": "For disassembled, scratched, dented and overall damaged parts like bumpers, preparation is very important. We are doing everything that is possible to make the surface perfect.",
-  "our_work_text_2": "All errors are corrected as much as possible and the polish is even better and deeper than the original.",
-  "our_work_text_3": "In the case of a high-quality restoration, the old built-in stainless steel parts usually cannot keep up and it is therefore advisable to refurbish them.",
-  "see_gallery_btn": "See the gallery",
-  "quality_service_title": "Quality service",
-  "quality_service_text": "This program is particularly suitable for extraordinary top restorations where the new condition is really aimed for and should be achieved as much as possible.",
-  "what_do_we_fix_title": "What do we fix?",
+  "title": "Chrom",
+  "our_work_title": "Unsere Arbeit",
+  "our_work_text_1": "Bei zerlegten, zerkratzten, verbeulten und insgesamt beschädigten Teilen wie Stoßstangen ist die Vorbereitung sehr wichtig. Wir tun alles, um die Oberfläche perfekt zu machen.",
+  "our_work_text_2": "Alle Fehler werden so weit wie möglich korrigiert und die Politur ist noch besser und tiefer als beim Original.",
+  "our_work_text_3": "Bei einer hochwertigen Restaurierung können die alten verbauten Edelstahlteile meist nicht mithalten und es empfiehlt sich daher eine Aufarbeitung.",
+  "see_gallery_btn": "Sehen Sie sich die Galerie an",
+  "quality_service_title": "Qualitätsservice",
+  "quality_service_text": "Dieses Programm eignet sich besonders für außergewöhnliche Top-Restaurationen, bei denen der Neuzustand wirklich angestrebt und möglichst erreicht werden soll.",
+  "what_do_we_fix_title": "Was reparieren wir?",
   "fix_type_1": "DS PALLAS von 4 bis 1967",
   "fix_type_2": "DS PALLAS von 1969 bis 1971",
   "fix_type_3": "DS PALLAS von 1971 bis 1975",
-  "fix_1_1": "Complete front and rear bumpers",
-  "fix_1_2": "All stainless steel rocker panels",
-  "fix_1_3": "All trims inside doors and roof area",
-  "fix_1_4": "All roof connections outside stainless steel including the trumpets",
-  "fix_1_5": "Four inside handles with grip shells",
-  "fix_1_6": "Exterior handles polished",
-  "fix_1_7": "Interior lights and loop holders",
-  "fix_1_8": "Sun visors",
-  "fix_1_9": "Mirror holder",
-  "fix_1_10": "Chrome surround steering wheel",
-  "fix_1_11": "Ashtray",
-  "fix_1_12": "If necessary, new chrome plating of the dashboard (showroom effect)",
-  "fix_1_13": "Chrome plating on gear lever and vent controls",
-  "fix_1_14": "Wiper arms",
-  "fix_1_15": "Hubcaps",
-  "fix_1_16": "Spray nozzles",
-  "fix_1_17": "Trunk hinges",
-  "fix_2_1": "Complete front and rear bumpers",
-  "fix_2_2": "All stainless steel rocker panels",
-  "fix_2_3": "All trims inside doors and roof area",
-  "fix_2_4": "All roof connections outside stainless steel including the trumpets",
-  "fix_2_5": "Four inner handles with grip shells",
-  "fix_2_6": "Exterior handles polished",
-  "fix_2_7": "Interior lights and loop holders",
-  "fix_2_8": "Sun visors",
-  "fix_2_9": "Gear lever chrome plating",
-  "fix_2_10": "Dashboard instrument panel 3 chrome rings",
-  "fix_2_11": "Wiper arms",
-  "fix_2_12": "Hubcaps",
-  "fix_2_13": "Spray nozzles",
-  "fix_2_14": "Trunk hinges",
-  "fix_3_1": "Complete front and rear bumpers",
-  "fix_3_2": "All stainless steel rocker panels",
-  "fix_3_3": "All trims inside doors and roof area",
-  "fix_3_4": "All roof connections outside stainless steel including the trumpets",
-  "fix_3_5": "Four inner handles with grip shells",
-  "fix_3_6": "Interior lights and loop holders",
-  "fix_3_7": "Sun visors",
-  "fix_3_8": "Gear level chrome plating",
-  "fix_3_9": "Dashboard instrument panel 3 chrome rings",
-  "fix_3_10": "Hubcaps",
-  "fix_3_11": "Trunk hinges",
-  "fix_3_12": "four exterior door buckles, flat, newly chrome-plated",
-  "gallery_title": "Gallery"
+  "fix_1_1": "Komplette vordere und hintere Stoßstangen",
+  "fix_1_2": "Alle Schweller aus Edelstahl",
+  "fix_1_3": "Alle Zierleisten in den Türen und im Dachbereich",
+  "fix_1_4": "Alle Dachanschlüsse aussen Edelstahl inkl. Trompeten",
+  "fix_1_5": "Vier Innengriffe mit Griffschalen",
+  "fix_1_6": "Außengriffe poliert",
+  "fix_1_7": "Innenbeleuchtung und Schlaufenhalter",
+  "fix_1_8": "Sonnenblenden",
+  "fix_1_9": "Spiegelhalter",
+  "fix_1_10": "Lenkrad mit Chromeinfassung",
+  "fix_1_11": "Aschenbecher",
+  "fix_1_12": "Bei Bedarf Neuverchromung des Armaturenbretts (Showroom-Effekt)",
+  "fix_1_13": "Verchromter Schalthebel und Lüftungshebel",
+  "fix_1_14": "Wischerarme",
+  "fix_1_15": "Radkappen",
+  "fix_1_16": "Sprühdüsen",
+  "fix_1_17": "Kofferscharniere",
+  "fix_2_1": "Komplette vordere und hintere Stoßstangen",
+  "fix_2_2": "Alle Schweller aus Edelstahl",
+  "fix_2_3": "Alle Zierleisten in den Türen und im Dachbereich",
+  "fix_2_4": "Alle Dachanschlüsse aussen Edelstahl inkl. Trompeten",
+  "fix_2_5": "Vier Innengriffe mit Griffschalen",
+  "fix_2_6": "Außengriffe poliert",
+  "fix_2_7": "Innenbeleuchtung und Schlaufenhalter",
+  "fix_2_8": "Sonnenblenden",
+  "fix_2_9": "Schalthebel verchromt",
+  "fix_2_10": "Armaturenbrett Instrumententafel 3 Chromringe",
+  "fix_2_11": "Wischerarme",
+  "fix_2_12": "Radkappen",
+  "fix_2_13": "Sprühdüsen",
+  "fix_2_14": "Kofferscharniere",
+  "fix_3_1": "Komplette vordere und hintere Stoßstangen",
+  "fix_3_2": "Alle Schweller aus Edelstahl",
+  "fix_3_3": "Alle Zierleisten in den Türen und im Dachbereich",
+  "fix_3_4": "Alle Dachanschlüsse aussen Edelstahl inkl. Trompeten",
+  "fix_3_5": "Vier Innengriffe mit Griffschalen",
+  "fix_3_6": "Innenbeleuchtung und Schlaufenhalter",
+  "fix_3_7": "Sonnenblenden",
+  "fix_3_8": "Verchromung auf Getriebeebene",
+  "fix_3_9": "Armaturenbrett Instrumententafel 3 Chromringe",
+  "fix_3_10": "Radkappen",
+  "fix_3_11": "Radkappen",
+  "fix_3_12": "Vier äußere Türschnallen, flach, neu verchromt",
+  "gallery_title": "Galerie"
 }
