--- a/locales/en/carsPage.json
+++ b/locales/en/carsPage.json
@@ -1,4 +1,4 @@
 {
-  "cars_for_sale'": "Cars for sale (de)",
-  "title_message": "_en"
+  "cars_for_sale": "Cars for sale",
+  "title_message": "Here you can see which cars do we have for sale at the moment."
 }
