--- a/locales/it/carsPage.json
+++ b/locales/it/carsPage.json
@@ -1,4 +1,4 @@
 {
-  "cars_for_sale'": "Cars for sale (de)",
-  "title_message": "(it)"
+  "cars_for_sale": "Macchine in vendita",
+  "title_message": "Qui puoi vedere quali auto abbiamo in vendita al momento."
 }
