read more button translated and button color changed

--- a/locales/de/carsPage.json
+++ b/locales/de/carsPage.json
@@ -1,4 +1,5 @@
 {
   "cars_for_sale": "Autos zu verkaufen",
-  "title_message": "Hier können Sie sehen, welche Autos wir im Moment zum Verkauf haben."
+  "title_message": "Hier können Sie sehen, welche Autos wir im Moment zum Verkauf haben.",
+  "read_more":"Weiterlesen"
 }
