--- a/locales/it/carsPage.json
+++ b/locales/it/carsPage.json
@@ -1,4 +1,5 @@
 {
   "cars_for_sale": "Macchine in vendita",
-  "title_message": "Qui puoi vedere quali auto abbiamo in vendita al momento."
+  "title_message": "Qui puoi vedere quali auto abbiamo in vendita al momento.",
+  "read_more":"Leggi di più"
 }
