--- a/locales/en/carsPage.json
+++ b/locales/en/carsPage.json
@@ -1,4 +1,5 @@
 {
   "cars_for_sale": "Cars for sale",
-  "title_message": "Here you can see which cars do we have for sale at the moment."
+  "title_message": "Here you can see which cars do we have for sale at the moment.",
+  "read_more":"Read more"
 }
