--- a/locales/fr/carsPage.json
+++ b/locales/fr/carsPage.json
@@ -1,4 +1,5 @@
 {
   "cars_for_sale": "Voitures à vendre",
-  "title_message": "Ici vous pouvez voir quelles voitures nous avons à vendre en ce moment."
+  "title_message": "Ici vous pouvez voir quelles voitures nous avons à vendre en ce moment.",
+  "read_more":"Lire la suite"
 }
