price_on_enquiry added, translated

--- a/locales/de/common.json
+++ b/locales/de/common.json
@@ -16,5 +16,6 @@
   "interior_navbar":"Innenraum",
   "chrome_parts":"Chromteile",
   "body_restoration":"Wiederherstellung des Körpers",
-  "contact":"Kontakt"
+  "contact":"Kontakt",
+  "price_on_enquiry":"Preis auf Anfrage"
 }
