--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -16,5 +16,6 @@
   "interior_navbar":"Interior",
   "chrome_parts":"Chrome parts",
   "body_restoration":"Body restoration",
-  "contact":"Contact"
+  "contact":"Contact",
+  "price_on_enquiry":"Price on enquiry"
 }
