--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -16,5 +16,6 @@
   "interior_navbar":"Intérieur",
   "chrome_parts":"Pièces chromées",
   "body_restoration":"Restauration de carrosserie",
-  "contact":"Contact"
+  "contact":"Contact",
+  "price_on_enquiry":"Prix sur demande"
 }
