--- a/locales/it/common.json
+++ b/locales/it/common.json
@@ -16,5 +16,6 @@
   "interior_navbar":"Interno",
   "chrome_parts":"Parti cromate",
   "body_restoration":"Restauro del corpo",
-  "contact":"Contatto"
+  "contact":"Contatto",
+  "price_on_enquiry":"Prezzo su richiesta"
 }
