--- a/locales/de/carsPage.json
+++ b/locales/de/carsPage.json
@@ -1,5 +1,6 @@
 {
   "cars_for_sale": "Autos zu verkaufen",
   "title_message": "Hier können Sie sehen, welche Autos wir im Moment zum Verkauf haben.",
-  "read_more":"Weiterlesen"
+  "read_more":"Weiterlesen",
+ "year":"Jahr"
 }
