--- a/locales/fr/carsPage.json
+++ b/locales/fr/carsPage.json
@@ -1,5 +1,6 @@
 {
   "cars_for_sale": "Voitures à vendre",
   "title_message": "Ici vous pouvez voir quelles voitures nous avons à vendre en ce moment.",
-  "read_more":"Lire la suite"
+  "read_more":"Lire la suite",
+  "year":"Année"
 }
