--- a/locales/de/bodyworkPage.json
+++ b/locales/de/bodyworkPage.json
@@ -1,8 +1,8 @@
 {
   "main_title": "Karosserie",
   "second_title": "Karosseriepartnerschaft",
-  "text_1": "Seit vielen Jahren pflegen wir eine erfolgreiche Partnerschaft mit kroatischen Unternehmen <a target='_blank' class='text-indigo-600 underline' href='https://autotoni.hr'>Auto Toni.</a>",
-  "text_2": "<a target='_blank' class='text-indigo-600 underline' href='https://autotoni.hr'>Auto Toni</a> bietet qualitativ hochwertige Arbeit, die uns hilft, unseren Service zu vervollständigen. Sie bieten Funktionen wie:",
+  "text_1": "Seit vielen Jahren pflegen wir eine erfolgreiche Partnerschaft mit kroatischen Unternehmen <a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni.</a>",
+  "text_2": "<a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni</a> bietet qualitativ hochwertige Arbeit, die uns hilft, unseren Service zu vervollständigen. Sie bieten Funktionen wie:",
  "direct":"Direkte Kommunikation mit dem Kunden",
     "top":"Erstklassige Lackierung",
     "toughest":"Härteste Karosserierestaurierungen",
