--- a/locales/en/bodyworkPage.json
+++ b/locales/en/bodyworkPage.json
@@ -1,8 +1,8 @@
 {
     "main_title": "Bodywork",
     "second_title": "Bodywork partnership",
-    "text_1": "For many years we have been having successful partnership with Croatian company <a target='_blank' class='text-indigo-600 underline' href='https://autotoni.hr'>Auto Toni.</a>",
-    "text_2": "<a target='_blank' class='text-indigo-600 underline' href='https://autotoni.hr'>Auto Toni</a> offers high quality work which helps us complete our service. They offer features like:",
+    "text_1": "For many years we have been having successful partnership with Croatian company <a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni.</a>",
+    "text_2": "<a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni</a> offers high quality work which helps us complete our service. They offer features like:",
     "direct":"Direct communication with the client",
     "top":"Top notch quality paint job",
     "toughest":"Toughest bodywork restorations",
