cars page editing

--- a/locales/de/carsPage.json
+++ b/locales/de/carsPage.json
@@ -2,5 +2,6 @@
   "cars_for_sale": "Autos zu verkaufen",
   "title_message": "Hier können Sie sehen, welche Autos wir im Moment zum Verkauf haben.",
   "read_more":"Weiterlesen",
- "year":"Jahr"
+  "year":"Jahr",
+  "car_gallery":"Auto Galerie"
 }
