--- a/locales/en/carsPage.json
+++ b/locales/en/carsPage.json
@@ -2,5 +2,6 @@
   "cars_for_sale": "Cars for sale",
   "title_message": "Here you can see which cars do we have for sale at the moment.",
   "read_more":"Read more",
-  "year":"Year"
+  "year":"Year",
+  "car_gallery":"Car gallery"
 }
