--- a/locales/it/carsPage.json
+++ b/locales/it/carsPage.json
@@ -2,5 +2,6 @@
   "cars_for_sale": "Macchine in vendita",
   "title_message": "Qui puoi vedere quali auto abbiamo in vendita al momento.",
   "read_more":"Leggi di più",
-  "year":"Anno"
+  "year":"Anno",
+  "car_gallery":"Galleria auto"
 }
