cars page full translated

--- a/locales/en/carsPage.json
+++ b/locales/en/carsPage.json
@@ -3,5 +3,15 @@
   "title_message": "Here you can see which cars do we have for sale at the moment.",
   "read_more":"Read more",
   "year":"Year",
-  "car_gallery":"Car gallery"
+  "car_gallery":"Car gallery",
+  "description":"Description",
+  "description_text":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.",
+  "specs":"Car specs",
+  "color":"Color",
+  "engine_power":"Engine power",
+  "engine_type":"Engine type",
+  "kilometers":"Kilometers",
+  "price":"Price",
+  "see_the_gallery":"See the gallery",
+  "send":"Send an inquiry"
 }
