--- a/locales/en/chromePage.json
+++ b/locales/en/chromePage.json
@@ -8,9 +8,9 @@
   "quality_service_title": "Quality service",
   "quality_service_text": "This program is particularly suitable for extraordinary top restorations where the new condition is really aimed for and should be achieved as much as possible.",
   "what_do_we_fix_title": "What do we fix?",
-  "fix_type_1": "DS PALLAS von 4 bis 1967",
-  "fix_type_2": "DS PALLAS von 1969 bis 1971",
-  "fix_type_3": "DS PALLAS von 1971 bis 1975",
+  "fix_type_1": "DS PALLAS from 4 to 1967",
+  "fix_type_2": "DS PALLAS from 1969 to 1971",
+  "fix_type_3": "DS PALLAS from 1971 to 1975",
   "fix_1_1": "Complete front and rear bumpers",
   "fix_1_2": "All stainless steel rocker panels",
   "fix_1_3": "All trims inside doors and roof area",
