--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -17,5 +17,5 @@
   "chrome_parts":"Chrome parts",
   "body_restoration":"Body restoration",
   "contact":"Contact",
-  "price_on_enquiry":"Price on enquiry"
+  "price_on_enquiry":"Price on inquiry"
 }
