--- a/locales/fr/carsPage.json
+++ b/locales/fr/carsPage.json
@@ -3,5 +3,15 @@
   "title_message": "Ici vous pouvez voir quelles voitures nous avons à vendre en ce moment.",
   "read_more":"Lire la suite",
   "year":"Année",
-  "car_gallery":"Galerie de voitures"
+  "car_gallery":"Galerie de voitures",
+  "description":"La description",
+  "description_text":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.",
+  "specs":"Spécifications de la voiture",
+  "color":"Couleur",
+  "engine_power":"Puissance du moteur",
+  "engine_type":"Type de moteur",
+  "kilometers":"Kilomètres",
+  "price":"Prix",
+  "see_the_gallery":"Voir la galerie",
+  "send":"Envoyer une demande"
 }
