--- a/locales/de/carsPage.json
+++ b/locales/de/carsPage.json
@@ -3,5 +3,15 @@
   "title_message": "Hier können Sie sehen, welche Autos wir im Moment zum Verkauf haben.",
   "read_more":"Weiterlesen",
   "year":"Jahr",
-  "car_gallery":"Auto Galerie"
+  "car_gallery":"Auto Galerie",
+  "description":"Beschreibung",
+  "description_text":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.",
+  "specs":"Fahrzeugspezifikationen",
+  "color":"Farbe",
+  "engine_power":"Motorleistung",
+  "engine_type":"Motortyp",
+  "kilometers":"Kilometer",
+  "price":"Preis",
+  "see_the_gallery":"Sehen Sie sich die Galerie an",
+  "send":"Senden Sie eine Anfrage"
 }
