--- a/locales/it/bodyworkPage.json
+++ b/locales/it/bodyworkPage.json
@@ -2,7 +2,8 @@
     "main_title": "Carrozzeria",
     "second_title": "Collaborazione con la carrozzeria",
     "text_1": "Da molti anni collaboriamo con successo con l'azienda croata <a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni.</a>",
-    "text_2": "<a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni</a> offre un lavoro di alta qualità che ci aiuta a completare il nostro servizio. Offrono funzionalità come:",
+    "text_2": "Puoi vedere i risultati finali nella galleria qui sotto.",
+    "text_3": "<a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni</a> offre un lavoro di alta qualità che ci aiuta a completare il nostro servizio. Offrono funzionalità come:",
     "direct":"Comunicazione diretta con il cliente",
     "top":"Verniciatura di prima qualità",
     "toughest":"Restauri di carrozzeria più difficili",
