--- a/locales/fr/bodyworkPage.json
+++ b/locales/fr/bodyworkPage.json
@@ -2,7 +2,8 @@
     "main_title": "Carrosserie",
     "second_title": "Partenariat de carrosserie",
     "text_1": "Depuis de nombreuses années, nous avons un partenariat fructueux avec une entreprise croate <a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni.</a>",
-    "text_2": "<a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni</a> offre un travail de haute qualité qui nous aide à compléter notre service. Ils offrent des fonctionnalités telles que :",
+    "text_2": "Vous pouvez voir les résultats finaux dans la galerie ci-dessous.",
+    "text_3": "<a target='_blank' style='color:#818cf8;text-decoration: underline;' href='https://autotoni.hr'>Auto Toni</a> offre un travail de haute qualité qui nous aide à compléter notre service. Ils offrent des fonctionnalités telles que :",
     "direct":"Communication directe avec le client",
     "top":"Travail de peinture de qualité supérieure",
     "toughest":"Les restaurations de carrosserie les plus difficiles",
